Fix code style issues in Copybara WorkflowTest.
BUG: 491085376
GWSQ_IGNORES: no-reply@google.com
PiperOrigin-RevId: 938530482
Change-Id: Ie339cf52e0585b5ed552def99ad78f2271ca6db8